--- a/scss/profile.css
+++ b/scss/profile.css
@@ -205,6 +205,7 @@ body main .opportunuties {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  list-style: none;
 }
 
 @media (min-width: 769px) {
