--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -195,6 +195,7 @@ body main .opportunuties {
     }
     ul {
         display: flex;
+        list-style: none;
         @media (min-width: 769px) {
             display: block;
         }
