--- a/scss/profile.css
+++ b/scss/profile.css
@@ -256,16 +256,7 @@ body main .opportunuties {
   background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
 }
 
-@media (min-width: 769px) {
-  #contents {
-    height: calc(100% - 3rem);
-    width: calc(100% - 6rem);
-    top: 3rem;
-    left: 96px;
-  }
-}
-
-a#page1 #page2 #page3 {
+#page1 #page2 #page3 {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -277,45 +268,45 @@ a#page1 #page2 #page3 {
   left: -100%;
 }
 
-a#page1 #page2 #page3.hide {
+#page1 #page2 #page3.hide {
   -webkit-transition: left 0s 0.5s;
   transition: left 0s 0.5s;
 }
 
-a#page1 #page2 #page3:nth-of-type(1) {
+#page1 #page2 #page3:nth-of-type(1) {
   z-index: 5;
 }
 
-a#page1 #page2 #page3:nth-of-type(2) {
+#page1 #page2 #page3:nth-of-type(2) {
   z-index: 4;
 }
 
-a#page1 #page2 #page3:nth-of-type(3) {
+#page1 #page2 #page3:nth-of-type(3) {
   z-index: 3;
 }
 
-a#page1 #page2 #page3:nth-of-type(4) {
+#page1 #page2 #page3:nth-of-type(4) {
   z-index: 2;
 }
 
-a#page1 #page2 #page3:nth-of-type(5) {
+#page1 #page2 #page3:nth-of-type(5) {
   z-index: 1;
 }
 
-a#page1 #page2 #page3.show {
+#page1 #page2 #page3.show {
   -webkit-transition: left 0.5s;
   transition: left 0.5s;
   left: 0;
   z-index: 6;
 }
 
-a#page1 #page2 #page3 section {
+#page1 #page2 #page3 section {
   width: 100%;
-  color: #fff;
 }
 
-a#page1 #page2 #page3 section h1 {
+#page1 #page2 #page3 section h1 {
   font-size: 1.5rem;
   margin: 0 0 2rem 0;
+  color: #fff;
 }
 /*# sourceMappingURL=profile.css.map */
