--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -230,20 +230,12 @@ body main .opportunuties {
     width: 100%;
     top: 6rem;
     left: 0;
-    @media (min-width: 769px) {
-        height: calc(100% - 3rem);
-        width: calc(100% - 6rem);
-        top: 3rem;
-        left: 96px;
-    }
-    border-radius:0 0 8px 0;
-    overflow:hidden;
-    background: linear-gradient(135deg,
-    #1c1a30 0%,
-    #38335d 100%);
+    border-radius: 0 0 8px 0;
+    overflow: hidden;
+    background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
 }
 
-a#page1 #page2 #page3 {
+#page1 #page2 #page3 {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -277,10 +269,10 @@ a#page1 #page2 #page3 {
     }
     section {
         width: 100%;
-        color: #fff;
         h1 {
             font-size: 1.5rem;
             margin: 0 0 2rem 0;
+            color: #fff;
         }
     }
 }
