--- a/scss/profile.css
+++ b/scss/profile.css
@@ -121,7 +121,7 @@ body main .man-info .score {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background-color: #db1a1a;
+  background-color: #cfcfcf;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
