--- a/scss/profile.css
+++ b/scss/profile.css
@@ -203,7 +203,6 @@ span h1 {
 
 .opp-droplist {
   background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
-  border-right: 1px solid #fff;
   width: 10%;
   height: calc(100% - 3rem);
   border-radius: 0 0 0 8px;
@@ -217,6 +216,7 @@ span h1 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  list-style: none;
 }
 
 .opp-droplist li {
