--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -202,13 +202,13 @@ span {
 
 .opp-droplist {
     background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
-    border-right: 1px solid #fff;
     width: 10%;
     height: calc(100% - 3rem);
     border-radius: 0 0 0 8px;
     ul {
         display: flex;
         flex-direction: column;
+        list-style: none;
     }
     li {
         line-height: 3;
