--- a/scss/profile.css
+++ b/scss/profile.css
@@ -193,6 +193,7 @@ body main .opportunuties {
 #tabs .tabContent {
   width: 300px;
   height: 60px;
+  background-color: #fff;
   border: 1px solid #707070;
   position: relative;
   top: -1px;
