--- a/scss/profile.css
+++ b/scss/profile.css
@@ -186,7 +186,7 @@ body main .opportunuties {
 
 #tabs .whiteborder {
   border: 1px solid #707070;
-  border-bottom: 1px solid #fff;
+  color: #fff;
   border-radius: 3px solid 0 0;
 }
 
