--- a/scss/profile.css
+++ b/scss/profile.css
@@ -192,7 +192,7 @@ body main .opportunuties {
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-header h1 {
+.wrapper header h1 {
   background: #f0f0f0;
   color: #555;
   padding: 1rem;
