--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -201,64 +201,62 @@ body main .opportunuties {
     }
 }
 
-nav {
-    width: 100%;
-    background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
-    @media (min-width: 769px) {
-        float: left;
-        width: 96px;
-        height: calc(100% - 3rem);
-        border-radius: 0 0 0 8px;
-    }
-    ul {
-        display: flex;
-        @media (min-width: 769px) {
-            display: block;
-        }
-    }
-    li {
-        line-height: 3;
-        padding: 0 1rem;
-        border-right: 1px solid #f0f0f0;
-        cursor: pointer;
-        color: #fff;
-        box-sizing: border-box;
-        @media (min-width: 769px) {
-            border-bottom: 1px solid #f0f0f0;
-            border-right: none;
-        }
-        &.hover {
-            background: rgba(255, 255, 255, 0.2);
-        }
-        &.pressed {
-            background: rgba(255, 255, 255, 0.7);
-        }
-        &.currentPage {
-            background: rgba(255, 255, 255, 0.5);
-        }
-    }
-}
-
-#contents {
-    box-sizing: border-box;
-    position: absolute;
-    height: calc(100% - 6rem);
-    width: 100%;
-    top: 6rem;
-    left: 0;
-    @media (min-width: 769px) {
-        height: calc(100% - 3rem);
-        width: calc(100% - 6rem);
-        top: 3rem;
-        left: 96px;
-    }
-    border-radius:0 0 8px 0;
-    overflow:hidden;
-    background: linear-gradient(135deg,
-    #1c1a30 0%,
-    #38335d 100%);
-}
-
+// nav {
+//     width: 100%;
+//     background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+//     @media (min-width: 769px) {
+//         float: left;
+//         width: 96px;
+//         height: calc(100% - 3rem);
+//         border-radius: 0 0 0 8px;
+//     }
+//     ul {
+//         display: flex;
+//         @media (min-width: 769px) {
+//             display: block;
+//         }
+//     }
+//     li {
+//         line-height: 3;
+//         padding: 0 1rem;
+//         border-right: 1px solid #f0f0f0;
+//         cursor: pointer;
+//         color: #fff;
+//         box-sizing: border-box;
+//         @media (min-width: 769px) {
+//             border-bottom: 1px solid #f0f0f0;
+//             border-right: none;
+//         }
+//         &.hover {
+//             background: rgba(255, 255, 255, 0.2);
+//         }
+//         &.pressed {
+//             background: rgba(255, 255, 255, 0.7);
+//         }
+//         &.currentPage {
+//             background: rgba(255, 255, 255, 0.5);
+//         }
+//     }
+// }
+// #contents {
+//     box-sizing: border-box;
+//     position: absolute;
+//     height: calc(100% - 6rem);
+//     width: 100%;
+//     top: 6rem;
+//     left: 0;
+//     @media (min-width: 769px) {
+//         height: calc(100% - 3rem);
+//         width: calc(100% - 6rem);
+//         top: 3rem;
+//         left: 96px;
+//     }
+//     border-radius:0 0 8px 0;
+//     overflow:hidden;
+//     background: linear-gradient(135deg,
+//     #1c1a30 0%,
+//     #38335d 100%);
+// }
 article {
     position: absolute;
     height: 100%;
