--- a/scss/profile.css
+++ b/scss/profile.css
@@ -302,6 +302,7 @@ body main .opportunuties {
 
 .wrapper article section {
   width: 100%;
+  height: auto;
   color: #fff;
 }
 
@@ -312,7 +313,7 @@ body main .opportunuties {
 
 .friends {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr 1fr;
