--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -272,6 +272,7 @@
          }
          section {
              width: 100%;
+             height: auto;
              color: #fff;
              h1 {
                  font-size: 1.5rem;
@@ -284,7 +285,7 @@
  // In tabs friends
  .friends {
      width: 100%;
-     height: 100%;
+     height: auto;
      display: grid;
      grid-template-rows: 1fr 1fr;
      grid-template-columns: 1fr 1fr;
